# Palette

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/BoomBox/: README.md
assets/WaterBottle/: README.md
src/: viewer.cc
src/paletteWidget/: blob.h  canvas.cpp  canvas.h  dish.cpp  dish.h  dishtools.cpp  dishtools.h  palettewidget.cpp  palettewidget.h  tessel.cpp  tessel.h
src/shaders/: simple.frag  simple.vert  test.frag
src/window/: alignedbox.cc  alignedbox.hh  glview.cc  glview.hh  mainwindow.cc  mainwindow.hh  model.cc  model.hh  trackball.cc  trackball.hh
